--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,12 @@
             <version>6.0.8</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>com.xenoamess.docker</groupId>
+            <artifactId>dockerfile-maven</artifactId>
+            <version>1.5.0</version>
+            <type>pom</type>
+        </dependency>
     </dependencies>
 
     <build>
